@@ -6,8 +6,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -28,11 +26,11 @@ class GodAnalysisServiceTest {
     void shouldCalculateSumForSingleNameWithoutFilter() {
         // Given: A single name "Zeus" (Z=90, e=101, u=117, s=115)
         // Expected: "90" + "101" + "117" + "115" = "90101117115" as BigInteger
-        List<String> names = Arrays.asList("Zeus");
-        String filter = "";
+        var names = List.of("Zeus");
+        var filter = "";
 
         // When
-        String result = godAnalysisService.calculateSum(names, filter);
+        var result = godAnalysisService.calculateSum(names, filter);
 
         // Then
         assertThat(result).isEqualTo("90101117115");
@@ -43,11 +41,11 @@ class GodAnalysisServiceTest {
     void shouldCalculateSumForMultipleNamesWithoutFilter() {
         // Given: Names "A" (65) and "B" (66)
         // Expected: 65 + 66 = 131
-        List<String> names = Arrays.asList("A", "B");
-        String filter = "";
+        var names = List.of("A", "B");
+        var filter = "";
 
         // When
-        String result = godAnalysisService.calculateSum(names, filter);
+        var result = godAnalysisService.calculateSum(names, filter);
 
         // Then
         assertThat(result).isEqualTo("131");
@@ -58,11 +56,11 @@ class GodAnalysisServiceTest {
     void shouldFilterNamesByFirstUnicodeCodePoint() {
         // Given: Names starting with different characters
         // Filter 'A' (Unicode 65) should only include "Athena", not "apollo" (lowercase 'a' = 97)
-        List<String> names = Arrays.asList("Athena", "apollo", "Apollo", "Zeus");
-        String filter = "A"; // Unicode code point 65
+        var names = List.of("Athena", "apollo", "Apollo", "Zeus");
+        var filter = "A"; // Unicode code point 65
 
         // When
-        String result = godAnalysisService.calculateSum(names, filter);
+        var result = godAnalysisService.calculateSum(names, filter);
 
         // Then
         // Should only process "Athena" (A=65, t=116, h=104, e=101, n=110, a=97) = "6511610410111097"
@@ -75,11 +73,11 @@ class GodAnalysisServiceTest {
     @DisplayName("Should return zero for filter with no matching names")
     void shouldReturnZeroForFilterWithNoMatchingNames() {
         // Given: Names that don't start with the filter character
-        List<String> names = Arrays.asList("Zeus", "Apollo", "Athena");
-        String filter = "n"; // lowercase 'n' - no names start with this
+        var names = List.of("Zeus", "Apollo", "Athena");
+        var filter = "n"; // lowercase 'n' - no names start with this
 
         // When
-        String result = godAnalysisService.calculateSum(names, filter);
+        var result = godAnalysisService.calculateSum(names, filter);
 
         // Then
         assertThat(result).isEqualTo("0");
@@ -89,11 +87,11 @@ class GodAnalysisServiceTest {
     @DisplayName("Should handle empty name list")
     void shouldHandleEmptyNameList() {
         // Given
-        List<String> names = Collections.emptyList();
-        String filter = "";
+        var names = List.<String>of();
+        var filter = "";
 
         // When
-        String result = godAnalysisService.calculateSum(names, filter);
+        var result = godAnalysisService.calculateSum(names, filter);
 
         // Then
         assertThat(result).isEqualTo("0");
@@ -104,11 +102,11 @@ class GodAnalysisServiceTest {
     void shouldHandleUnicodeSupplementaryCharacters() {
         // Given: Name with supplementary character (emoji or high Unicode)
         // Using a simple test with known values first
-        List<String> names = Arrays.asList("𝒜"); // Mathematical Script Capital A (U+1D49C = 119964)
-        String filter = "";
+        var names = List.of("𝒜"); // Mathematical Script Capital A (U+1D49C = 119964)
+        var filter = "";
 
         // When
-        String result = godAnalysisService.calculateSum(names, filter);
+        var result = godAnalysisService.calculateSum(names, filter);
 
         // Then
         assertThat(result).isEqualTo("119964");
@@ -119,11 +117,11 @@ class GodAnalysisServiceTest {
     void shouldCalculateExpectedAcceptanceTestValue() {
         // Given: Mock data representing names from all sources (Greek, Roman, Nordic)
         // This validates the algorithm works correctly with a large dataset
-        List<String> allSourceNames = createMockAllSourceNames();
-        String filter = "";
+        var allSourceNames = createMockAllSourceNames();
+        var filter = "";
 
         // When
-        String result = godAnalysisService.calculateSum(allSourceNames, filter);
+        var result = godAnalysisService.calculateSum(allSourceNames, filter);
 
         // Then - This should match the calculated result for our mock data
         assertThat(result).isEqualTo("7275310936777392779665073079");
@@ -133,13 +131,13 @@ class GodAnalysisServiceTest {
     @DisplayName("Should handle null or empty filter as no filtering")
     void shouldHandleNullOrEmptyFilterAsNoFiltering() {
         // Given
-        List<String> names = Arrays.asList("Zeus", "Apollo");
-        
+        var names = List.of("Zeus", "Apollo");
+
         // When - empty filter
-        String resultEmpty = godAnalysisService.calculateSum(names, "");
-        
+        var resultEmpty = godAnalysisService.calculateSum(names, "");
+
         // When - null filter (if supported)
-        String resultNull = godAnalysisService.calculateSum(names, null);
+        var resultNull = godAnalysisService.calculateSum(names, null);
 
         // Then - both should be the same (no filtering)
         assertThat(resultEmpty).isEqualTo(resultNull);
@@ -154,7 +152,7 @@ class GodAnalysisServiceTest {
         // This is a reverse-engineered set of names that should produce "78179288397447443426"
         // In the real implementation, this would come from the HTTP client
         // For now, we'll create a simple set that we can verify mathematically
-        return Arrays.asList(
+        return List.of(
             "Zeus", "Hera", "Poseidon", "Demeter", "Athena", "Apollo", "Artemis", "Ares", "Aphrodite", "Hephaestus",
             "Jupiter", "Juno", "Neptune", "Ceres", "Minerva", "Mars", "Venus", "Vulcan", "Diana", "Mercury",
             "Odin", "Frigg", "Thor", "Balder", "Loki", "Freyr", "Freyja", "Heimdall", "Tyr", "Vidar"
